# taxi_demand_predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: README.md  feature_pipeline.yaml  inference_pipeline.yaml  retrain_on_mae.yml
data/transformed/: ts_data_2022_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and _targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb  README.md
src/: README.md  config.py  data.py  data_split.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  inference_1.py  model.py  monitoring.py  paths.py  plot.py  retrain_on_mae.py  simple_frontend.py  streamlit_retrain.py
