[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Manish Shrivastav",email = "carttoshoppe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "src", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "taxi-demand-predictor"
version = "0.1.0"
description = "NYC Taxi Demand Prediction with Hopsworks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
scikit-learn = "^1.3"
hopsworks = "^3.0"
jupyter = "^1.0"
python-dotenv = "^1.0"
# Add other dependencies as needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"