[tool.poetry]
name = "taxi-demand-predictor"
version = "0.1.0"
description = "NYC Taxi Demand Prediction with Hopsworks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0"
scikit-learn = "^1.3"
hopsworks = "^4.0"
jupyter = "^1.0"
jupyterlab = "^4.0"
python-dotenv = "^1.0"
numpy = "^1.24"
requests = "^2.31"
tqdm = "^4.66"
pyarrow = "^14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"